--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -48,8 +48,94 @@
     <None Include="html5\HTML5_课程设置.doc" />
     <None Include="html5\移动前端开发%28HTML5%29课程体系研发v1.0.ppt" />
     <None Include="html5\课程标准%28HTML5网页编程%29.doc" />
+    <None Include="web\images\Descr.WD3" />
+    <None Include="web\images\temp\Descr.WD3" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="web\css\blue-skin5152.css" />
+    <Content Include="web\css\blue-skin\blue-bg.jpg" />
+    <Content Include="web\css\blue-skin\devine-art.png" />
+    <Content Include="web\css\blue-skin\facebook.png" />
+    <Content Include="web\css\blue-skin\flickr.png" />
+    <Content Include="web\css\blue-skin\footer-bg.png" />
+    <Content Include="web\css\blue-skin\google.png" />
+    <Content Include="web\css\blue-skin\linked-in.png" />
+    <Content Include="web\css\blue-skin\rss.png" />
+    <Content Include="web\css\blue-skin\skype.png" />
+    <Content Include="web\css\blue-skin\stumble.png" />
+    <Content Include="web\css\blue-skin\twitter.png" />
+    <Content Include="web\css\bootstrap5152.css" />
+    <Content Include="web\css\custom5152.html" />
+    <Content Include="web\css\green-skin5152.css" />
+    <Content Include="web\css\main5152.css" />
+    <Content Include="web\css\red-skin5152.css" />
+    <Content Include="web\css\responsive5152.css" />
+    <Content Include="web\images\calendar-icon.png" />
+    <Content Include="web\images\category-icon.png" />
+    <Content Include="web\images\category-main-icon.png" />
+    <Content Include="web\images\comment.png" />
+    <Content Include="web\images\devine-art.png" />
+    <Content Include="web\images\facebook.png" />
+    <Content Include="web\images\faq-minus.png" />
+    <Content Include="web\images\faq-plus.png" />
+    <Content Include="web\images\favicon.png" />
+    <Content Include="web\images\flickr.png" />
+    <Content Include="web\images\footer-bg.png" />
+    <Content Include="web\images\glyphicons-halflings-white.png" />
+    <Content Include="web\images\glyphicons-halflings.png" />
+    <Content Include="web\images\google.png" />
+    <Content Include="web\images\image-large.png" />
+    <Content Include="web\images\image.png" />
+    <Content Include="web\images\li-arrow.png" />
+    <Content Include="web\images\like-btn.png" />
+    <Content Include="web\images\like.png" />
+    <Content Include="web\images\linked-in.png" />
+    <Content Include="web\images\loading.gif" />
+    <Content Include="web\images\logo.png" />
+    <Content Include="web\images\main-bg.jpg" />
+    <Content Include="web\images\plus-minus.png" />
+    <Content Include="web\images\question-large.png" />
+    <Content Include="web\images\question.png" />
+    <Content Include="web\images\quote.png" />
+    <Content Include="web\images\rss.png" />
+    <Content Include="web\images\scroll-top.png" />
+    <Content Include="web\images\search-loader.gif" />
+    <Content Include="web\images\skype.png" />
+    <Content Include="web\images\standard-large.png" />
+    <Content Include="web\images\standard.png" />
+    <Content Include="web\images\stumble.png" />
+    <Content Include="web\images\support.png" />
+    <Content Include="web\images\temp\living-room-770x501.jpg" />
+    <Content Include="web\images\temp\man.png" />
+    <Content Include="web\images\twitter.png" />
+    <Content Include="web\images\user.png" />
+    <Content Include="web\images\video-large.png" />
+    <Content Include="web\images\video.png" />
+    <Content Include="web\index.html" />
+    <Content Include="web\js\custom.js" />
+    <Content Include="web\js\custom5152.js" />
+    <Content Include="web\js\jflickrfeed.js" />
+    <Content Include="web\js\jquery-1.8.3.min.js" />
+    <Content Include="web\js\jquery.easing.1.3.js" />
+    <Content Include="web\js\jquery.easing.1.34e44.js" />
+    <Content Include="web\js\jquery.form.js" />
+    <Content Include="web\js\jquery.formd471.js" />
+    <Content Include="web\js\jquery.liveSearch.js" />
+    <Content Include="web\js\jquery.liveSearchd5f7.js" />
+    <Content Include="web\js\jquery.validate.min.js" />
+    <Content Include="web\js\jquery.validate.minfc6b.js" />
+    <Content Include="web\js\prettyphoto\jquery.prettyPhoto.js" />
+    <Content Include="web\js\prettyphoto\jquery.prettyPhotoaeb9.js" />
+    <Content Include="web\js\prettyphoto\prettyPhotoaeb9.css" />
+    <Content Include="web\主页-版块+内容列表.html" />
+    <Content Include="web\内容页-简洁-无评论.html" />
+    <Content Include="web\内容页.html" />
+    <Content Include="web\加精帖子列表.html" />
+    <Content Include="web\帖子列表.html" />
+    <Content Include="web\版块列表.html" />
+    <Content Include="web\联系我们-内容展示.html" />
+    <Content Include="web\联系我们.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
